--- a/tra1_bringup/package.xml
+++ b/tra1_bringup/package.xml
@@ -15,6 +15,8 @@
 
   <run_depend>minas_control</run_depend>
   <run_depend>tra1_description</run_depend>
+  <run_depend>joint_state_controller</run_depend>
+  <run_depend>joint_trajectory_controller</run_depend>
 
   <export>
   </export>
