--- a/gx_control/package.xml
+++ b/gx_control/package.xml
@@ -11,10 +11,17 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>ethercat_manager</build_depend>
+  <build_depend>controller_interface</build_depend>
+  <build_depend>pluginlib</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>ethercat_manager</run_depend>
+  <run_depend>controller_interface</run_depend>
+  <run_depend>pluginlib</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <export>
+    <controller_interface plugin="${prefix}/gx_control_plugin.xml"/>
   </export>
 
 </package>
