--- a/minas_control/CMakeLists.txt
+++ b/minas_control/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(minas_control)
 
-find_package(catkin REQUIRED COMPONENTS controller_manager transmission_interface hardware_interface sensor_msgs joint_limits_interface trajectory_msgs ethercat_manager soem)
+find_package(catkin REQUIRED COMPONENTS controller_manager transmission_interface hardware_interface gx_control sensor_msgs joint_limits_interface trajectory_msgs ethercat_manager soem)
 
 ###################################
 ## catkin specific configuration ##
